# simple-grpc-server

./: .gitignore  CMakeLists.txt  README.md  manager.bat  vcpkg.json
include/hello/: hello.h
proto/: CMakeLists.txt
proto/hello/: hello.proto
src/: main.cpp
src/hello/: hello.cpp
